# graphlang

./: .gitignore  CMakeLists.txt  Makefile
include/: node.hpp  node_store.hpp
py/: dict_version.py  matrix_version.py  model.py  test_eval.py
src/: main.cpp  node.cpp  node_store.cpp
tests/: CMakeLists.txt  test_node_store.cpp
